--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <div class="perf2_glav">
             <div class="text_afglav1_2">17 сентября</div>
             <div class="text_afglav2_2">среда, 19:00</div>
-            <div class="perf1_img_2"><img src="./img/slaider/_1700716-2.jpg" alt="" class="perf1_img1_2"></div>
+            <div class="perf1_img_2"><img src="./img/slaider/_1700716-2.png" alt="" class="perf1_img1_2"></div>
             <div class="text_afglav3_2">ХОЛОП</div>
             <div class="text_afglav4_2">Режиссер - Настасья Судакова</div>
             <div class="text_afglav5_2" id="text_afglav5_2">МАЛАЯ СЦЕНА</div>
@@ -129,7 +129,7 @@
           <div class="perf4_glav">
             <div class="text_afglav1_4">19 сентября</div>
             <div class="text_afglav2_4">пятница, 14:00</div>
-            <div class="perf1_img_4"><img src="./img/slaider/_1300394.jpg" alt="" class="perf1_img1_4"></div>
+            <div class="perf1_img_4"><img src="./img/slaider/_1300394.png" alt="" class="perf1_img1_4"></div>
             <div class="text_afglav3_4">МАТЬ</div>
             <div class="text_afglav4_4">Режиссер - Борис Константинов</div>
             <div class="text_afglav5_4" id="text_afglav5_4">БОЛЬШАЯ СЦЕНА</div>
@@ -140,7 +140,7 @@
           <div class="perf5_glav">
             <div class="text_afglav1_5">19 сентября</div>
             <div class="text_afglav2_5">пятница, 19:00</div>
-            <div class="perf1_img_5"><img src="./img/slaider/_1700716-2.jpg" alt="" class="perf1_img1_5"></div>
+            <div class="perf1_img_5"><img src="./img/slaider/_1700716-2.png" alt="" class="perf1_img1_5"></div>
             <div class="text_afglav3_5">ХОЛОП</div>
             <div class="text_afglav4_5">Режиссер - Настасья Судакова</div>
             <div class="text_afglav5_5" id="text_afglav5_5">МАЛАЯ СЦЕНА</div>
